--- a/templates/map/feature.html
+++ b/templates/map/feature.html
@@ -6,7 +6,7 @@
 		<div class="feature-overview-thumbnail">
 			<a href="{% url 'detail' feature.id %}"><img src="{% thumbnail feature.thumbnail 300x170 crop='0,0' %}"></a>
 			<div class="feature-icons">
-				{% if documents %}<span class="glyphicon glyphicon-file"></span> {% endif %}{% if images %}<span class="glyphicon glyphicon-picture"></span> {% endif %}{% if media %}<span class="glyphicon glyphicon-play"></span> {% endif %}
+				{% if documents %}<span class="glyphicon glyphicon-file" class="documentIcon" data-toggle="tooltip" data-placement="left" title="Documents"></span> {% endif %}{% if images %}<span class="glyphicon glyphicon-picture"  class="imageIcon" data-toggle="tooltip" data-placement="top" title="Images"></span> {% endif %}{% if media %}<span class="glyphicon glyphicon-play" class="mediaIcon" data-toggle="tooltip" data-placement="bottom" title="Audio or Video"></span> {% endif %}{% if feature.site %}<span class="glyphicon glyphicon-home" class="siteIcon" data-toggle="tooltip" data-placement="right" title="Part of {{ feature.site }}"></span>{% endif %}
 			</div>
 		</div>
 	{% endif %}
@@ -18,7 +18,7 @@
 		{% endif %}
 		{% if not feature.thumbnail %}
 			<div class="feature-icons">
-				{% if documents %}<span class="glyphicon glyphicon-file"></span> {% endif %}{% if images %}<span class="glyphicon glyphicon-picture"></span> {% endif %}{% if media %}<span class="glyphicon glyphicon-play"></span> {% endif %}
+				{% if documents %}<span class="glyphicon glyphicon-file" class="documentIcon" data-toggle="tooltip" data-placement="left" title="Documents"></span> {% endif %}{% if images %}<span class="glyphicon glyphicon-picture"  class="imageIcon" data-toggle="tooltip" data-placement="top" title="Images"></span> {% endif %}{% if media %}<span class="glyphicon glyphicon-play" class="mediaIcon" data-toggle="tooltip" data-placement="bottom" title="Audio or Video"></span> {% endif %}{% if feature.site %}<span class="glyphicon glyphicon-home" class="siteIcon" data-toggle="tooltip" data-placement="right" title="Part of {{ feature.site }}"></span>{% endif %}
 			</div>
 		{% endif %}
 		{% if feature.short_description %}
@@ -26,16 +26,21 @@
 		{% endif %}
 		<div class="btn-group">{% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a> {% endif %}<a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?last_feature={{ feature.id }}{% endif %}" class="btn btn-default btn-sm">Add Content</a> <a href="{% url 'detail' feature.id %}" class="btn btn-default btn-sm">Read More</a></div>
 	</div>
-		<script>
-			$('.close-this').click(function() {
-				$('.infobox-control').hide();
-				resetColours(buildings);
-			});
-			
-			$('.category_btn').click(function(e) {
-				e.preventDefault();
-				var jsonUrl = $(this).attr('href');
-				loadFeatures(jsonUrl);
-			})
-		</script>
 </div>
+<script>
+	$('.close-this').click(function() {
+		$('.infobox-control').hide();
+		resetColours(buildings);
+	});
+	
+	$('.category_btn').click(function(e) {
+		e.preventDefault();
+		var jsonUrl = $(this).attr('href');
+		loadFeatures(jsonUrl);
+	})
+
+	$('.feature-overview').ready(function() {
+		$('[data-toggle="tooltip"]').tooltip();
+	});
+
+</script>
