very minor change to dashboard view

--- a/templates/map/dashboard.html
+++ b/templates/map/dashboard.html
@@ -7,7 +7,7 @@
 			<h1>Dashboard</h1>
 			<ul class="nav nav-tabs" role="tablist">
 				<li role="presentation" class="active"><a href="#statistics" aria-controls="statistics" role="tab" data-toggle="tab">Statistics</a></li>
-				<li role="presentation"><a href="#moderation" aria-controls="moderation" role="tab" data-toggle="tab">Moderation <span class="badge">{{ pending_documents|length|add:pending_images|length|add:pending_media|length }}</span></a></li>
+				<li role="presentation"><a href="#moderation" aria-controls="moderation" role="tab" data-toggle="tab">Moderation <span class="badge">{{ all_pending }}</span></a></li>
 			</ul>
 		</div>
 	</div>
