got tag autocomplete working on front end, need it to work in the back end as well

--- a/templates/map/add_document.html
+++ b/templates/map/add_document.html
@@ -71,18 +71,12 @@
 
 {% load staticfiles %}
 <script src="{% static 'js/ugc_functions.js' %}"></script>
-
-<script>
-
-// var data = [{% for tag in tags %}'{{ tag }}',{% endfor %}]
-
-// $('#id_tags').select2({
-//	tags: true,
-//	data: data,
-//});
-
-
-</script>
+<link href="/static/autocomplete_light/vendor/select2/dist/css/select2.css" type="text/css" media="all" rel="stylesheet" />
+<link href="/static/autocomplete_light/select2.css" type="text/css" media="all" rel="stylesheet" />
+<script type="text/javascript" src="/static/autocomplete_light/jquery.init.js"></script>
+<script type="text/javascript" src="/static/autocomplete_light/autocomplete.init.js"></script>
+<script type="text/javascript" src="/static/autocomplete_light/vendor/select2/dist/js/select2.full.js"></script>
+<script type="text/javascript" src="/static/autocomplete_light/select2.js"></script>
 
 
 {% endblock %}
