minor tweaks to source info in upload templates

--- a/templates/map/add_document.html
+++ b/templates/map/add_document.html
@@ -55,7 +55,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-4">
 				<h4>What We're Looking For</h4>
-				<p>We're looking for people's memories or knowledge of Whitechapel. If you know something about the history of this building, or have a memory of what it used to be like, you can add it here.</p>
+				<p>We're looking for people's memories or knowledge of Whitechapel. If you know something about the history of this building, or have a memory of what it used to be like, you can add it here. If you're submitting historical information, please mention your sources.</p>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<h4>Using the Editor</h4>
