--- a/templates/map/add_image.html
+++ b/templates/map/add_image.html
@@ -54,7 +54,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-4">
 				<h4>What We're Looking For</h4>
-				<p>If you've got a photo, drawing, or painting of this building, either from now or as it was in the past, you can contribute it using this page.</p>
+				<p>If you've got a photo, drawing, or painting of this building, either from now or as it was in the past, you can contribute it using this page. Please mention the source of your image, and don't submit anything that you don't own the copyright for or isn't in the public domain.</p>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<h4>How to Add an Image</h4>
