--- a/templates/map/add_media.html
+++ b/templates/map/add_media.html
@@ -53,7 +53,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-4">
 				<h4>What We're Looking For</h4>
-				<p>If you've found or uploaded a video or audio about this building or its history to YouTube, Vimeo, or SoundCloud, you can add it here.</p>
+				<p>If you've found or uploaded a video or audio about this building or its history to YouTube, Vimeo, or SoundCloud, you can add it here. Please mention the source of your media, and don't submit anything that you don't own the copyright for or isn't in the public domain.</p>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<h4>How to Contribute Video or Audio</h4>
