--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -1,6 +1,8 @@
+{% load analytical %}
 <!DOCTYPE html>
 <html>
 	<head>
+		{% analytical_head_top %}
 		<title>Survey of London {{ subtitle }}</title>
 		<meta charset="UTF-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +31,10 @@
 		<script src="{% static 'js/select2/js/select2.min.js' %}"></script>
 		<!-- Charts.js for Dashboard -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
+		{% analytical_head_bottom %}
 	</head>
 	<body data-spy="scroll" data-target="#fixed-nav">
+		{% analytical_body_top %}
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 			    <div class="navbar-header navbar-left">
@@ -113,5 +117,6 @@
 			</div>
 		</footer>
 		{% endblock %}
+		{% analytical_body_bottom %}
 	</body>
 </html>
