--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -14,9 +14,7 @@
 					  {% csrf_token %}
 					  {% load crispy_forms_tags %}
 					  {{ form|crispy }}
-					  {% if redirect_field_value %}
-					  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-					  {% endif %}
+					  <input type="hidden" name="{{ redirect_field_name }}" value="{% url 'user_profile' %}" />
 					  <button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
 				</form>
 				<p class="login-dialogue-text">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
