adjustments to login and signup forms

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,9 +14,8 @@
           <div class="col-xs-12 col-md-7">
           <h3>Contribute to Survey of London Whitechapel</h3>
           <hr>
-          <p>This website is a collaboration between the Survey of London and you, the reading public.</p>
-          <p>To start contributing your memories, research, images or media about Whitechapel's buildings and history, sign in using the form on the right.</p>
-          <p>If you don't have an account yet, <a href="{{ signup_url }}">sign up here</a>.</p>
+          <p>To start contributing to Survey of London Whitechapel, log in with Google or Facebook using the buttons on the right.</p>
+          <p>If you'd rather have a separate account for Survey of London Whitechapel, you can <a href="{{ signup_url }}">sign up for one here</a>.</p>
           </div>
         <div class="col-xs-12 col-md-5">
         <h3>Sign In</h3>
