--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,9 +6,9 @@ body {
 }
 p, .infobox-control p {
 	font-family: Georgia;
-	font-size: 21px;
-	line-height: 33px;
-	margin-bottom: 33px;
+	font-size: 19px;
+	line-height: 30px;
+	margin-bottom: 30px;
 }
 .content li {
 	font-size: 21px;
@@ -439,7 +439,11 @@ p.divider {
 	color: #666666;
 	margin: 5px;
 } 
-
+.help-block {
+	font-size: 14px;
+	font-style: italic;
+	line-height: 22px;
+}
 
 /* Medium Editor */
 
