--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -16,7 +16,7 @@
 			<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
 				{% csrf_token %}
 				{% load crispy_forms_tags %}
-				{{ form.|crispy }}
+				{{ form|crispy }}
 				{% if redirect_field_value %}
 				<input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 				{% endif %}
