--- a/templates/map/dashboard.html
+++ b/templates/map/dashboard.html
@@ -52,7 +52,7 @@
 		<div role="tabpanel" class="tab-pane" id="moderation">
 			<div class="row"> <!-- Pending Content -->
 				<div class="col-xs-12">
-					<h2>Pending Content</h2>
+					<h2>Pending Submissions</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -85,7 +85,7 @@
 					<div class="col-xs-12 col-md-4">
 						<h3>Media</h3>
 						{% for item in pending_media %}
-							<h3><a href="{% url 'moderate_media' item.id %}">{{ item.title }}</a><br /><span class="small"><a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.feature }}<br />Submitted {{ item.last_edited }}</span
+							<h3><a href="{% url 'moderate_media' item.id %}">{{ item.title }}</a><br /><span class="small"><a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.feature }}<br />Submitted {{ item.last_edited }}</span></h3>
 						{% endfor %}
 					</div>
 				{% endif %}
