many edits as suggested by the survey team this morning

--- a/templates/map/add_document.html
+++ b/templates/map/add_document.html
@@ -55,15 +55,15 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-4">
 				<h4>What We're Looking For</h4>
-				<p>We're looking for people's memories or knowledge of Whitechapel. If you know something about the history of this building, or have a memory of what it used to be like, you can add it here. If you're submitting historical information, please mention your sources.</p>
+				<p>We're looking for people's memories or knowledge of Whitechapel. If you know something about the history of this building, or have a memory of what it used to be like, you can add it here. </p>
+			</div>
+			<div class="col-xs-12 col-md-4">
+			<h4>Sources</h4>
+				<p>If you're submitting historical research, please include your sources. This will ensure that the information on the site is reliable, and will help other users in their own research.</p>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<h4>Using the Editor</h4>
 				<p>Highlight text to show the editing toolbar. You can add footnotes by putting a reference like this [^1] in the text, followed by [^1]: with the footnote content at the end.</p>
-			</div>
-			<div class="col-xs-12 col-md-4">
-				<h4>Help People Find Your Content</h4>
-				<p>Give your text a title and add one or two tags. For example, if you've got a memory of a particular time, you could tag it '1960s'.</p>
 			</div>
 		</div>
 	</div>
@@ -77,18 +77,6 @@
 <script type="text/javascript" src="/static/autocomplete_light/autocomplete.init.js"></script>
 <script type="text/javascript" src="/static/autocomplete_light/vendor/select2/dist/js/select2.full.js"></script>
 <script type="text/javascript" src="/static/autocomplete_light/select2.js"></script>
-
-<script>
-
-// var data = [{% for tag in tags %}'{{ tag }}',{% endfor %}]
-
-// $('#id_tags').select2({
-//	tags: true,
-//	data: data,
-//});
-
-
-</script>
 
 
 {% endblock %}
