--- a/templates/map/add_media.html
+++ b/templates/map/add_media.html
@@ -53,15 +53,15 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-4">
 				<h4>What We're Looking For</h4>
-				<p>If you've found or uploaded a video or audio about this building or its history to YouTube, Vimeo, or SoundCloud, you can add it here. Please mention the source of your media, and don't submit anything that you don't own the copyright for or isn't in the public domain.</p>
+				<p>If you've found or uploaded a video or audio about this building or its history to YouTube, Vimeo, or SoundCloud, you can add it here.</p>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<h4>Sources</h4>
+				<p>If you know who made the media you've submitted, when and where it was published or broadcast, or who's in it, add this information in the 'Tell us about this' box.</p>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<h4>How to Contribute Video or Audio</h4>
 				<p>Paste the URL of the video or audio into the box above and it will be embedded automatically.</p>
-			</div>
-			<div class="col-xs-12 col-md-4">
-				<h4>Help People Find Your Content</h4>
-				<p>Give your video a title and add one or two tags. For example, if you've got a memory of a particular time, you could tag it '1960s'.</p>
 			</div>
 		</div>
 	</div>
