--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -266,6 +266,7 @@ html {
   width: 100%;
   background-color: #f5f5f5;
   padding-bottom: 50px;
+  margin-top: 30px;
 }
 /* Footnotes */
 .footnote-ref {
