--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -21,7 +21,7 @@
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-xs-12 col-md-7">
-		{% if not histories and not descriptions and not stories and not images and not media and not site_docs %}
+		{% if not histories and not descriptions and not stories and not images and not media and not site_docs and not notes %}
 			<hr />
 			<h2>We Don't Have Any Information About This Place Yet</h2>
 			<p>Do you know something about the history of this building or the people who have lived or worked here? {% if user.is_authenticated %}<a href="{% url 'ugc_choice' feature.id %}">Contribute it here.</a>{% else %}<a href="{% url 'account_login' %}">Contribute it here.</a>{% endif %}</p>
@@ -39,14 +39,17 @@
 				{% if stories %}
 					<li role="presentation"{% if not histories and not descriptions %}class="active"{% endif %}><a href="#story" aria-controls="stories" role="tab" data-toggle="tab">Memories</a></li>
 				{% endif %}
+				{% if notes %}
+					<li role="presentation"{% if not histories and not descriptions and not stories %}class="active"{% endif %}><a href="#notes" aria-controls="stories" role="tab" data-toggle="tab">Notes</a></li>
+				{% endif %}
 				{% if feature.site and site_docs %}
-					<li role="presentation"{% if not histories and not descriptions and not stories %}class="active"{% endif %}><a href="#site" aria-controls="site" role="tab" data-toggle="tab">{{ feature.site }}</a></li>
+					<li role="presentation"{% if not histories and not descriptions and not stories and not notes %}class="active"{% endif %}><a href="#site" aria-controls="site" role="tab" data-toggle="tab">{{ feature.site }}</a></li>
 				{% endif %}
 				{% if images %}
-					<li role="presentation"{% if not histories and not descriptions and not stories and not site_docs %}class="active"{% endif %}><a href="#images" aria-controls="images" role="tab" data-toggle="tab">Images</a></li>
+					<li role="presentation"{% if not histories and not descriptions and not stories and not notes and not site_docs %}class="active"{% endif %}><a href="#images" aria-controls="images" role="tab" data-toggle="tab">Images</a></li>
 				{% endif %}
 				{% if media %}
-					<li role="presentation"{% if not histories and not descriptions and not stories and not feature.site and not images %}class="active"{% endif %}><a href="#media" aria-controls="media" role="tab" data-toggle="tab">Audio and Video</a></li>
+					<li role="presentation"{% if not histories and not descriptions and not stories and not notes and not feature.site and not images %}class="active"{% endif %}><a href="#media" aria-controls="media" role="tab" data-toggle="tab">Audio and Video</a></li>
 				{% endif %}
 			</ul>
 		</div>
@@ -87,8 +90,19 @@
 					{% endfor %}
 				{% endif %}
 			{% endif %}
-			{% if site_docs %}
+			{% if notes %}
 				{% if not histories and not descriptions and not stories %}
+					{% for document in notes %}
+						{% if document.start_year %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}<br /><span class="small">{{ document.start_year }} - {{ document.end_year }}</span></a></li>
+						{% else %}
+							<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>
+						{% endif %}
+					{% endfor %}
+				{% endif %}
+			{% endif %}
+			{% if site_docs %}
+				{% if not histories and not descriptions and not stories and not notes %}
 					{% for document in site_docs %}
 						{% if document.start_year %}
 							<li><a href="#{{ document.title|slugify }}">{{ document.title }}<br /><span class="small">{{ document.start_year }} - {{ document.end_year }}</span></a></li>
@@ -116,7 +130,7 @@
 					</div>
 				{% endif %}
 				{% if descriptions %}
-					<div role="tabpanel" class="tab-pane{% if not histories  %} active{% endif %}" id="description">
+					<div role="tabpanel" class="tab-pane{% if not histories %} active{% endif %}" id="description">
 					{% for document in descriptions %}
 						<div class="document">
 							<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
@@ -137,8 +151,19 @@
 					{% endfor %}
 					</div>
 				{% endif %}
+				{% if notes %}
+					<div role="tabpanel" class="tab-pane{% if not histories and not descriptions and not stories %} active{% endif %}" id="notes">
+					{% for document in notes %}
+						<div class="document">
+							<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
+							<h2>{{ document.title }}<br /><span class="small">Contributed by <a href="{% url 'all_content_by_author' document.author.id %}">{% if document.author.userprofile.display_name %}{{ document.author.userprofile.display_name }}{% else %}{{ document.author }}{% endif %}</a></span></h2>
+							{{ document.body_processed|safe }}
+						</div>	
+					{% endfor %}
+					</div>
+				{% endif %}
 				{% if feature.site and site_docs %}
-					<div role="tabpanel" class="tab-pane{% if not histories and not descriptions and not stories %} active{% endif %}" id="site">
+					<div role="tabpanel" class="tab-pane{% if not histories and not descriptions and not stories and not notes %} active{% endif %}" id="site">
 					{% for document in site_docs %}
 						<div class="document">
 							<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
@@ -149,7 +174,7 @@
 					</div>
 				{% endif %}
 				{% if images %}
-					<div role="tabpanel" class="tab-pane{% if not histories and not descriptions and not stories and not site_docs %} active{% endif %} row" id="images">
+					<div role="tabpanel" class="tab-pane{% if not histories and not descriptions and not stories and not notes and not site_docs %} active{% endif %} row" id="images">
 						{% load thumbnail %}
 						{% for image in images %}
 						<div class="col-xs-12 col-sm-4 col-md-4">
@@ -162,7 +187,7 @@
 					</div>
 				{% endif %}
 				{% if media %}
-					<div role="tabpanel" class="tab-pane{% if not histories and not descriptions and not stories and not feature.site and not images %} active{% endif %} row" id="media">
+					<div role="tabpanel" class="tab-pane{% if not histories and not descriptions and not stories and not notes and not feature.site and not images %} active{% endif %} row" id="media">
 						<div class="col-xs-12">
 							{% load embed_video_tags %}
 							{% for embed in media %}
@@ -311,6 +336,8 @@
 
 	var storyNav = '{% for document in stories %}{% if document.start_year %}<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>{% else %}<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>{% endif %}{% endfor %}';
 
+	var noteNav = '{% for document in notes %}{% if document.start_year %}<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>{% else %}<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>{% endif %}{% endfor %}';
+
 	var siteNav = '{% for document in site_docs %}{% if document.start_year %}<li><a href="#{{ document.title|slugify }}">{{ document.start_year }} - {{ document.end_year }}<br /><span class="small">{{ document.title }}</span></a></li>{% else %}<li><a href="#{{ document.title|slugify }}">{{ document.title }}</span></a></li>{% endif %}{% endfor %}'
 
 	$('#docTabs a').click(function(e) {
@@ -322,6 +349,8 @@
 			$('#fixed-nav ul').html(historyNav);
 		} else if ($(this).html() == 'Memories') {
 			$('#fixed-nav ul').html(storyNav);
+		} else if ($(this).html() == 'Notes') {
+			$('#fixed-nav ul').html(noteNav);
 		} else if ($(this).attr('href') == '#site') {
 			$('#fixed-nav ul').html(siteNav);
 		} else {
