--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -23,8 +23,8 @@
 		<div class="col-xs-12 col-md-7">
 		{% if not histories and not descriptions and not stories and not images and not media and not site_docs and not notes %}
 			<hr />
-			<h2>We Don't Have Any Information About This Place Yet</h2>
-			<p>Do you know something about the history of this building or the people who have lived or worked here? {% if user.is_authenticated %}<a href="{% url 'ugc_choice' feature.id %}">Contribute it here.</a>{% else %}<a href="{% url 'account_login' %}">Contribute it here.</a>{% endif %}</p>
+			<h2>Can You Tell Us More About This Place?</h2>
+			<p>Do you know something about the history of this building or the people who have lived or worked here? {% if user.is_authenticated %}<a href="{% url 'ugc_choice' feature.id %}">Contribute it here.</a>{% else %}<a href="{% url 'account_login' %}?last_feature={{ feature.id }}">Contribute it here.</a>{% endif %}</p>
 
 		{% else %}
 
